basic_frontend_ui-interface-complate

--- a/frontend/src/components/List/list.css
+++ b/frontend/src/components/List/list.css
@@ -44,3 +44,93 @@
     transition: all 1s ease;
   }
   
+
+
+  /* ================= */
+  @media screen and (max-width: 768px) {
+    .navbar .container {
+      padding: 0px 20px;
+      height: 50px;
+    }
+  
+    .navbar .container .left img {
+      height: 20px;
+      margin-right: 20px;
+    }
+  
+    .navbar .container .left span {
+      margin-right: 10px;
+      font-size: 12px;
+    }
+  
+    .navbar .container .right .icon {
+      margin: 0px 10px;
+    }
+  
+    .navbar .container .right img {
+      width: 25px;
+      height: 25px;
+    }
+  
+    .navbar .container .right .profile span {
+      padding: 5px;
+      font-size: 12px;
+    }
+  
+    .featured {
+      height: auto;
+      min-height: 70vh;
+      position: relative;
+    }
+  
+    .featured .category {
+      position: relative;
+      top: 50px;
+      left: 0;
+      font-size: 20px;
+    }
+  
+    .featured .category select {
+      margin-left: 10px;
+    }
+  
+    .featured .info {
+      width: 100%;
+      position: relative;
+      left: 0;
+      bottom: 0;
+      padding: 20px;
+      text-align: center;
+    }
+  
+    .featured .info img {
+      width: 100%;
+      max-width: 300px;
+      margin-bottom: 10px;
+    }
+  
+    .featured .info .buttons {
+      flex-wrap: wrap;
+    }
+  
+    .featured .info .buttons button {
+      padding: 10px 15px;
+      margin: 5px;
+      font-size: 14px;
+    }
+  
+    .list .listTitle {
+      margin-left: 20px;
+      font-size: 18px;
+    }
+  
+    .list .wrapper .sliderArrow {
+      width: 30px;
+      font-size: 12px;
+    }
+  
+    .list .wrapper .container {
+      margin-left: 20px;
+    }
+  }
+  
